--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ SECRET_KEY=your-secret-key-goes-here
 DEBUG=False
 
 # Database (Render PostgreSQL Internal URL)
-DATABASE_URL=postgres://user:pass@host:port/dbname
+DATABASE_URL=postgres://user:pass@host:port/dbname,
 
 # Django Security - Domains that can serve your app
 ALLOWED_HOSTS=.onrender.com,localhost,127.0.0.1
