--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,13 @@
-# Django Security
-SECRET_KEY=your-secret-key-goes-here
 
-# Debug (False in production)
-DEBUG=False
+# ========================================
+# .env.template - LOCAL DEVELOPMENT ONLY
+# ========================================
+SECRET_KEY=django-insecure-local-1234567890abcdefghijklmnopqrstuvwxyzABCDEF-local-only!!
 
-# Database (Render PostgreSQL Internal URL)
-DATABASE_URL=postgres://user:pass@host:port/dbname,
+DEBUG=True
 
-# Django Security - Domains that can serve your app
-ALLOWED_HOSTS=.onrender.com,localhost,127.0.0.1
+DATABASE_URL=
 
-# CORS - Frontend domains that can call your API
-CORS_ALLOWED_ORIGINS=https://yourusername.github.io,http://localhost:5500
+ALLOWED_HOSTS=localhost,127.0.0.1,kanmind.onrender.com
+
+CORS_ALLOWED_ORIGINS=https://vladkovach.github.io,http://localhost:5500,http://127.0.0.1:5500
